# mmm_rs

./: .gitignore  Cargo.toml
src/: main.rs
src/model/: mod.rs  music.rs  music_player.rs
ui/: appwindow.slint  player.slint
